Rename images to URL-friendly filenames and update all references

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
     </div>
     <div class="hero-media">
       <!-- optional small gallery or image -->
-      <img src="uploads/images/3-Bed House  Osu-3.jpg" alt="" style="width:340px;border-radius:12px;box-shadow:0 20px 50px rgba(0,0,0,0.6)">
+      <img src="uploads/images/house-3-osu.jpg" alt="" style="width:340px;border-radius:12px;box-shadow:0 20px 50px rgba(0,0,0,0.6)">
     </div>
   </div>
 </section>
@@ -21,7 +21,7 @@
     <div class="grid" id="featured-grid">
       <!-- cards are rendered by the rentals/sales pages logic; small static fallback -->
       <div class="card">
-        <img src="uploads/images/3-Bed House  Osu-3.jpg" alt="Sample">
+        <img src="uploads/images/house-3-osu.jpg" alt="Sample">
         <div class="card-body">
           <h3>3-Bed House — Osu</h3>
           <p class="price">GHS 1,200 / month</p>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="uploads/images/Luxury 4-Bed Mansion Airport-2.jpg" alt="Sample 2">
+        <img src="uploads/images/mansion-4bed.jpg" alt="Sample 2">
         <div class="card-body">
           <h3>Luxury 4-Bed Mansion — Airport</h3>
           <p class="price">GHS 12,000 / sale</p>
