--- a/pages/rentals.html
+++ b/pages/rentals.html
@@ -3,7 +3,7 @@
     <h2>Rentals</h2>
     <div class="grid">
       <div class="card">
-        <img src="uploads/images/3-Bed House  Osu-3.jpg" alt="">
+        <img src="uploads/images/house-3-osu.jpg" alt="">
         <div class="card-body">
           <h3>3-Bed House — Osu</h3>
           <p class="price">GHS 1,200 / month</p>
@@ -16,7 +16,7 @@
       </div>
 
       <div class="card">
-        <img src="uploads/images/Luxury 4-Bed Mansion Airport-2.jpg" alt="">
+        <img src="uploads/images/flat-2bed.jpg" alt="">
         <div class="card-body">
           <h3>2-Bed Simple Flat — Cantonments</h3>
           <p class="price">GHS 900 / month</p>
