--- a/pages/sales.html
+++ b/pages/sales.html
@@ -3,7 +3,7 @@
     <h2>For Sale</h2>
     <div class="grid">
       <div class="card">
-        <img src="uploads/images/Luxury 4-Bed Mansion Airport-2.jpg" alt="">
+        <img src="uploads/images/mansion-4bed.jpg" alt="">
         <div class="card-body">
           <h3>Luxury 4-Bed Mansion — Airport</h3>
           <p class="price">GHS 12,000 / sale</p>
